@@ -1,3 +1,8 @@
+Change log next version
+-----------------------
+* Added var-args to mockStatic in the PowerMockito API. You can now do: 
+  mockStatic(A.class, B.class, C.class);
+
 Change log 1.4.12 (2012-04-05)
 ------------------------------
 * Really added missing class, PowerMockTestCase, to testng full release jar (issue 327). 
